Replace shortName with method.

--- a/lib/flamegraph/flamegraph.html.erb
+++ b/lib/flamegraph/flamegraph.html.erb
@@ -499,8 +499,8 @@ _.each(gemsSorted, function(stat){
 // see: http://bl.ocks.org/mundhradevang/1387786
 function fontSize(d,i) {
   var size = yScale(1) / 3;
-  // var words = d.shortName.split(' ');
-  var word = d.shortName; // words[0];
+  // var words = d.method.split(' ');
+  var word = d.method; // words[0];
   var width = xScale(d.width+100);
   var height = yScale(1);
   var length = 0;
